--- a/catalogo-microservicios/src/main/resources/application.properties
+++ b/catalogo-microservicios/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=root
 ## spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
