some modifications in proxy, actores resource working properly

--- a/catalogo-microservicios/src/main/resources/application.properties
+++ b/catalogo-microservicios/src/main/resources/application.properties
@@ -61,3 +61,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.security.enabled=false
 management.endpoints.health.sensitive=*
+
+# desactivar eureka y zipkin. Para volver a activarlos, comento
+eureka.client.enabled=false
+spring.zipkin.enabled=false
